--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mysql": "^2.13.0",
     "node-record-lpcm16": "^0.2.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
