--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-card": "^1.0.4",
     "react-deck": "^2.0.2",
     "react-dom": "^15.4.2",
+    "react-facebook-login-component": "^0.6.0",
     "react-flipcard": "^0.2.1",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
